[gd_scene load_steps=12 format=3 uid="uid://bmg8t7dg4xk3d"]

[ext_resource type="Script" uid="uid://d172rxc2oke1c" path="res://assets/scenes/shop.gd" id="1_8mshb"]
[ext_resource type="Texture2D" uid="uid://bmsln1pifbvs6" path="res://assets/textures/fx/hit_02_effect.jpg" id="2_lhdqg"]
[ext_resource type="Shader" uid="uid://b3pome8s7hhf6" path="res://assets/scripts/shaders/UI_outline.gdshader" id="3_yqcb6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_et1oa"]

[sub_resource type="Theme" id="Theme_et1oa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y838"]
bg_color = Color(0.519177, 0.39289, 0.67135, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gwi2"]
bg_color = Color(0.314156, 0.218282, 0.478821, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.419298, 0.626065, 0.790687, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et1oa"]
bg_color = Color(0.198825, 0.161311, 0.311695, 1)

[sub_resource type="Theme" id="Theme_4y838"]
Button/styles/hover = SubResource("StyleBoxFlat_4y838")
Button/styles/normal = SubResource("StyleBoxFlat_1gwi2")
Button/styles/pressed = SubResource("StyleBoxFlat_et1oa")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1gwi2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7xejk"]
shader = ExtResource("3_yqcb6")
shader_parameter/color = Color(0.23141, 0.319718, 0.512097, 1)
shader_parameter/direction = -1.0
shader_parameter/frequency = 15.0
shader_parameter/speed = 3.0
shader_parameter/radius = 1.0
shader_parameter/line_thickness = 0.03

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mshb")

[node name="BgOutline" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -170.0
offset_bottom = 149.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0.475109, 0.559679, 0.827677, 1)

[node name="Shop" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_et1oa")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -169.0
offset_right = -2.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0.121929, 0.133329, 0.189038, 1)

[node name="ItemsOutline" type="ColorRect" parent="Shop"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -134.5
offset_right = -17.0
offset_bottom = 65.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0.475109, 0.559679, 0.827677, 1)

[node name="ItemsBG" type="ColorRect" parent="Shop"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -132.5
offset_right = -18.0
offset_bottom = 64.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0.123487, 0.106051, 0.199465, 1)

[node name="ItemsContainer" type="BoxContainer" parent="Shop"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 29.0
offset_right = -114.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20
vertical = true

[node name="itemTemplate" type="Button" parent="Shop/ItemsContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_et1oa")

[node name="TextureRect" type="TextureRect" parent="Shop/ItemsContainer/itemTemplate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_lhdqg")
expand_mode = 1
stretch_mode = 6

[node name="RichTextLabel" type="RichTextLabel" parent="Shop/ItemsContainer/itemTemplate"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -24.0
offset_right = 19.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0.529067, 0.529067, 0.529067, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 2
text = "$320"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="BuyItem" type="Button" parent="Shop"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -34.0
offset_right = 38.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_4y838")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_1gwi2")
text = "Buy"

[node name="CloseShop" type="Button" parent="Shop"]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_top = 10.0
offset_right = -7.0
offset_bottom = 26.0
grow_horizontal = 0
theme = SubResource("Theme_4y838")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_1gwi2")

[node name="RichTextLabel" type="RichTextLabel" parent="Shop/CloseShop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
text = "X"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Outline" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7xejk")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -169.0
offset_right = -2.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0.145266, 0.15813, 0.220946, 1)

[connection signal="button_up" from="Shop/CloseShop" to="." method="_on_close_shop"]
